# campaign_signal_hub

./: .gitignore  README.md  index.html  pyproject.toml
assets/: index-5MBN4wHw.js  index-BHmgcg-l.css  index-D6-FS9Kc.js  index-HrimkiPZ.css
backend/app/: __init__.py  main.py
backend/app/api/: campaigns.py  exports.py  signals.py  uploads.py
backend/app/core/: config.py
backend/app/models/: __init__.py  campaign.py  signal.py  source.py
backend/app/services/: analysis.py  data_loader.py  datasets.py  export_builder.py  ingestion.py  llm_client.py  persistence.py  quality_checks.py  repository.py  seed.py  signal_extractor.py
data/fixtures/: coffee_campaign_brief.md  coffee_creator_shortlist.csv  coffee_performance_snapshot.csv  creator_shortlist.csv  demo_campaign_brief.md  demo_comments.csv  performance_snapshot.csv
data/samples/: beauty_50_comments.csv  coffee_5000_comments.csv  coffee_50_comments.csv  coffee_50_products.csv
docs/: DATA_IMPLEMENTATION_PLAN.md  MVP_TASKS.md  NEXT_OPTIMIZATION_PLAN.md  PROJECT_INTERVIEW_BRIEF.md  PROJECT_PLAN.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  demoData.ts  styles.css  types.ts
scripts/: expand_reviews_for_products.py  format_python.sh  lookup_amazon_products.py  sample_amazon_reviews.py
