[project]
name = "campaign-signal-hub"
version = "0.1.0"
description = "Campaign signal extraction MVP with FastAPI and React."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
data = [
  "huggingface-hub>=0.24.0"
]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "httpx2>=0.0.1",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backend", "scripts"]
extend-exclude = [
  ".venv",
  "frontend",
  "data",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import sorting
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
